# ChangeLog for media-libs/mesa
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/mesa/ChangeLog,v 1.407 2012/07/12 17:05:34 ranger Exp $

  12 Jul 2012; Brent Baude <ranger@gentoo.org> mesa-8.0.3.ebuild:
  Marking mesa-8.0.3 ppc stable for bug 419473

  11 Jul 2012; Brent Baude <ranger@gentoo.org> mesa-8.0.3.ebuild:
  Marking mesa-8.0.3 ppc64 stable for bug 419473

  29 Jun 2012; Markus Meier <maekke@gentoo.org> mesa-8.0.3.ebuild:
  arm stable, bug #419473

  28 Jun 2012; Jeroen Roovers <jer@gentoo.org> mesa-8.0.3.ebuild:
  Stable for HPPA (bug #419473).

  24 Jun 2012; Agostino Sarubbo <ago@gentoo.org> mesa-8.0.3.ebuild:
  Stable for x86, wrt bug #419473

  22 Jun 2012; Agostino Sarubbo <ago@gentoo.org> mesa-8.0.3.ebuild:
  Stable for amd64, wrt bug #419473

  11 Jun 2012; Tomáš Chvátal <scarabeus@gentoo.org> mesa-8.0.3-r1.ebuild:
  Fix die on missing VG include dir with -openvg. Fixes bug#420369.

  06 Jun 2012; Luca Barbato <lu_zero@gentoo.org> mesa-8.0.3-r1.ebuild:
  Fix glproto dep

*mesa-8.0.3-r1 (05 Jun 2012)

  05 Jun 2012; Luca Barbato <lu_zero@gentoo.org> +mesa-8.0.3-r1.ebuild:
  New revision to support new opengl-eselect layout

  01 Jun 2012; Tomáš Chvátal <scarabeus@gentoo.org>
  -files/eselect-mesa.conf.7.9, -files/eselect-mesa.conf.8.0,
  -mesa-7.9.2.ebuild, -mesa-8.0.1-r2.ebuild, -mesa-8.0.1.ebuild,
  -mesa-8.0.2.ebuild, -mesa-8.0.ebuild:
  Cleanup some overshadowed versions and remove oldest as it failed to build for
  me on stable.

  28 May 2012; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  mesa-8.0.3.ebuild:
  Add one more patch for llvm-3.1 compatibility.

*mesa-8.0.3 (28 May 2012)

  28 May 2012; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  +mesa-8.0.3.ebuild:
  Version bump, bug #416823. Apply patches identified by marienz to allow
  building against llvm-3.1, bug #417363.

  11 May 2012; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>