@@ -7,13 +7,15 @@ DIST MesaLib-7.10.3.tar.bz2 6056837 RMD160 bd9800a0cf98560a4424742cac635b4c07a39
 DIST MesaLib-7.11.2.tar.bz2 6257280 RMD160 656ded1db6c1f6fdd15a3f2cdee1b895d393bcea SHA1 5981ac2de8438e5f4a1f3561f2044d700c5f0de9 SHA256 57746aa8c60bc6f5596ec6c6c7274de40fa12edce5ec33fe899e704fa00b5357
 DIST MesaLib-7.11.tar.bz2 6559702 SHA256 f8bf37a00882840a3e3d327576bc26a79ae7f4e18fe1f7d5f17a5b1c80dd7acf SHA512 ba33d56b3e163eee896ac0036a4cd5209dfed3fa6bf6d47fd6f3b32b58d55417dc3ac50228909bee46bf0a4900565a86b46431ca89379f072212b025792a9acc WHIRLPOOL 3b81183d87ca1dda202655b3b6f0d699de5447a653d1e35cb89a5f5db0e6fa00a805cb018245b64510090b524b7c0a12f76f0fddd61e64e5caff3f61919bd369
 DIST MesaLib-8.0.3.tar.bz2 5737289 RMD160 3d9d6dfbe42bc3ce1d3df491ca4e353108abec4b SHA1 768bdb2fe133bbcccd3323b79484d0d17bc0d05d SHA256 96812c59b0923314914185a2b064eb5245f1228a319c4db94835ce1c84da407f
+DIST MesaLib-8.0.4.tar.bz2 5737052 SHA256 02ed19f4f5f6535dda03a9932a81438aa78ea723ebba1f39a3d49a70a4e1d07e SHA512 b7e8879e92252d0588d9eeeed904fd502ce1f48551b9a97f52aeb1318c79a80fab27504521107d61fbb5d986b2d778d89023a892baf9f1c5a5d2ee3746fefa57 WHIRLPOOL 5371a13e93e2d43264e2580e1e5e28ed85b6bfbdda9dd89104b1c18e62d35417e20b0ed8f13d8c54f58b83875fac9348d57f14ba08e4a88599e5fc0202502173
 DIST mesa-7.10.1-gentoo-patches-01.tar.bz2 5488 RMD160 acc52b4f05b82a98e7994dc005699630270de360 SHA1 f38c616eeacbeebe597ed4bc98b84a41caa18108 SHA256 31cd4f6d1a0a70249c40452919074856d120cd473a01a8457e3dc147a1b622d8
 DIST mesa-7.11.2-gentoo-patches-01.tar.bz2 4021 RMD160 45196d33a7e2f6d3766ddf9cf5e5ab1b5becff18 SHA1 51e567e8549477160ddceaa2a618dd6dfe3656e1 SHA256 e1e29d335f7e0c69824041a92b1815cd4e2defa4689285c86ea59d47a7ef407b
-DIST mesa-8.0.3-gentoo-patches-02.tar.bz2 1858 RMD160 21b0ba905b8b212d96b5de5d43bb98f02d30715d SHA1 5c748d57e0d6fab12b558e6ccfddede422db1732 SHA256 554e2f49ff4e33b4eb64c50d010f3be4ae302ab01af2794feff2ea73c0eb7104
+DIST mesa-8.0.3-gentoo-patches-02.tar.bz2 1858 SHA256 554e2f49ff4e33b4eb64c50d010f3be4ae302ab01af2794feff2ea73c0eb7104 SHA512 efe7212fed36143096b6eab0f99558361723023a99e6e37e2ca047fa18168c1d85ef614b5bcc55d259fa30d5468c322e7c1ecce28e5b28dc1585ee7badbd5ac4 WHIRLPOOL 3fda1876bbedcba2533176a931c8300681e34bc9b5555a53cef218f2db431a18ddb1d11a3bfd7497106107932c85ded40178e8a2dc5b9ccd03fb452b061028b5
 EBUILD mesa-7.10.3.ebuild 9842 SHA256 655c8ccabf2b476cf5e0c5c8936ceb04ad91f6fa2e009bae2103978368914da6 SHA512 dd3c07dc2ef1ccfca8693671f23a88abf7d325e6a518468cc4fa5ea7b4a7b44049de96b3a6ed105239aeea4f80498f41200eb1ed0e97dd5bbbac656737e84a22 WHIRLPOOL 3b6288a6c1c9011a5c0b17097db25fc6b98c78657613d38de0d8a5707a42d3f2a143c583c0439591c783715178c91ad1a338fa8d4f79aff59d5e1672b30bb2a0
 EBUILD mesa-7.11.2.ebuild 9991 SHA256 bfb44d32edbdb69fd5f3acfe13064fb2d5132681130dc83baf704736e9309df3 SHA512 3f8c28c80fee1ce7bef852a132721abcba1c23567a17ffcd28e2536763ecc1bb7f2a4be44718ef3cc2b6e1c4ef29fd1e32e30fb648e280e6d21409237a55b1aa WHIRLPOOL 06190c007e9c25255fa0752ba2de96ba17cafc5bc2e74148ed595bb2c6e5a2f0a4959e01fa43a3ac0f8a20537503c34a13e46dd4c327d24434ef836dd7c9bf3e
 EBUILD mesa-7.11.ebuild 9998 SHA256 6331d9a272cf58684bdefa3a87b2f7b428bf70233d56954a1e515ed39b6b5fbc SHA512 63ef247bbe196af503c3f5bc358018fcd4390e816fbc0048bbd0fced535d033d5726bac4318061368b70857ed597c4cdc3bebd6acc87fad3b1a9bb5c4e857c73 WHIRLPOOL 67e0426c126186ff58b740c251435cce6e13f1e7cbce69173f66305d92526e33ce049610acd57014686e3ba565cdc1d4b5d71913355ac1416ab64e0ba01d7191
 EBUILD mesa-8.0.3-r1.ebuild 10837 SHA256 150016d8d1abfcd26b92840d09b9a8bdadb69eb99186f7866be1a3b4614481cd SHA512 7948a3f9c597d3f19f6b9010b2c293cf82e8bd786ea23e0423463b6de5166b0589806d287d77d3886f2c9d510e0d3a5aa29c8c58743fc476d11dd9a8ede91e32 WHIRLPOOL fe1c4d1fcbd1baef924101cea6906c1a9e42e0175a70ea88e09b9c880884188dec513fb3321ed96d65aa625febb318381989a2e748a4fdbc1cfcbfd10df148ed
 EBUILD mesa-8.0.3.ebuild 10677 SHA256 4796ba40c2716200b492ef0640247d0e84b1fa9dc8d5f35aee532125bb517e55 SHA512 9417da8706b3bfa024b533635b9b3baf9cf0e7033c565bcdc3d64d0b16f9bb7a9b6d3aed667fe930de991eec2137b20442becd4bf78c1e22d1bf052f63ec24a0 WHIRLPOOL 5f92e62dfdac5277f22e06d50364881b5dd1b56c2a9e303da847c7b9f12276bdaf6d22a1fed9baa748d06058a84aefbe5151456fb81fd1cae6642339fa753284
-MISC ChangeLog 66645 SHA256 c52d67892c5746fef1e6cdc6151864b60936b9cb7f1ad0c5b8bea0ac8fba8444 SHA512 1c9d933c442ba65cffd0a135819bd400dd149dae7279bcda94e049942247ef8d62c723078b473643b8c39ac01d0590797f19c7a4185bf11c34477f10b1457d54 WHIRLPOOL e8d9bf110826c009c294df83f25ac7054efe977ee1594a8dc5e55380cee54dd5ed8baf9b1dcd8e5dd05542255290c0190ae08a71a3e8cf4592b4b788d944ce6e
+EBUILD mesa-8.0.4.ebuild 10840 SHA256 88cea27f029d400b3dc124b8a8b90b46c2225eeffa6a8344305c17224b017ece SHA512 310767241b0ae3063129bce82cea63fb5342ec7353d1e4e5eb1d99709cbd77e4cfff4f72ccdd14696d2c5f8a8a504d2b5b86cef141ac6781f470f4cd16dde6c5 WHIRLPOOL aefa80ad0f0a8fa6caefe48133b10c1ade5608019b841327ae8a2917f7abb519fae79320b6c2c5d400893381139344c8b748101722fa2f8e6b0764520c7acca4
+MISC ChangeLog 66795 SHA256 fc8352f5e4bfddd9e81a6a713ed6159d826a440a40838fa7080ffbed889cabac SHA512 2bd01a1b35218f99edba1101134c1af63e524c5c56d1006aa86576ba1facaee80d42216b88513f5898b71b67e8e72cab569aa8520f91b0baf5a4fbd7ee44a29e WHIRLPOOL 2bd6e85effdc79e2b6d6c02aed82786f24991c74a992bb6bd4ff1195fb4aa2c3bbfa868dd2406ac9429190b5e68a301b19a74c0f066a30baa93cb0b4b0d98bbc
 MISC metadata.xml 1719 SHA256 48b27a829c1fee92ff4119093789a4cf8f57d56bea30df6d6fac26b13f80cabb SHA512 9661ef0f185db6209e9f3cd4e5a53932f7b67afe9d701412c48b9a05fc6d3a4ee4221f383797ae5eff0256de190263a0020ff455f0a36e26cd226da13c0d671a WHIRLPOOL 892cc3be9e0a2065b100431058d92611048fbbc75f0dbe688904e676fbb3bc98ccc0a623481162182c48834dcb0a603d7d1c98a9e8ec1b2bed3522ac262227c5
