@@ -1,6 +1,12 @@
 # ChangeLog for media-libs/mesa
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/mesa/ChangeLog,v 1.407 2012/07/12 17:05:34 ranger Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/mesa/ChangeLog,v 1.408 2012/07/21 22:02:58 chithanh Exp $
+
+*mesa-8.0.4 (21 Jul 2012)
+
+  21 Jul 2012; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
+  +mesa-8.0.4.ebuild:
+  Version bump, bug #426872.
 
   12 Jul 2012; Brent Baude <ranger@gentoo.org> mesa-8.0.3.ebuild:
   Marking mesa-8.0.3 ppc stable for bug 419473
